2005-07-28  Thomas Schwinge  <schwinge@nic-nac-project.de>

	[BZ #1137]
	* misc/error.c [_LIBC]: Include <stdbool.h> and <stdint.h>.

2005-07-20  Ulrich Drepper  <drepper@redhat.com>

	[BZ #1138]
	* sysdeps/x86_64/fpu/libm-test-ulps: Adjust expected atan2f results.
	* sysdeps/powerpc/fpu/libm-test-ulps: Likewise.
	* sysdeps/s390/fpu/libm-test-ulps: Likewise.

2005-07-20  Bob Wilson  <bob.wilson@acm.org>
 	    Darin Petkov  <darin@tensilica.com>

	[BZ #1138]
	* sysdeps/ieee754/flt-32/e_atan2f.c (pi_lo): Correct exponent value.

2005-07-19  Ulrich Drepper  <drepper@redhat.com>

	[BZ #1137]
	* misc/Makefile: Add rules to build and run tst-error1.
	* misc/tst-error1.c: New file.
	* misc/error.c: Fix memory leak and possibly endless loop.

2005-07-18  Ulrich Drepper  <drepper@redhat.com>

	[BZ #1113]
	* nscd/grpcache.c (cache_addgr): Use correct maximum for group ID
	length.  Patch by Ivan Gyurdiev <ivg2@cornell.edu>.

2005-07-15  Andreas Jaeger  <aj@suse.de>

	[BZ #1079]
	* include/stdlib.h: Remove malloc attribute from __posix_memalign.
	* stdlib/stdlib.h: Likewise.

2005-07-13  Ulrich Drepper  <drepper@redhat.com>

	* nscd/nscd_helper.c: Add a few __builtin_expect.

	[BZ #1080]
	* nscd/connections.c (send_ro_fd): Make sure BUF is aligned correctly.
	* nscd/nscd_helper.c (wait_on_socket): New function.
	(get_mapping): Use wait_on_socket instead of poll.  The former handles
	EINTR of poll correctly.
	(__nscd_open_socket): Likewise.
	(get_mapping): Make sure BUF is aligned correctly.
	(get_mapping): Use munmap on correct pointer.

2005-07-12  Jakub Jelinek  <jakub@redhat.com>

	[BZ #1106]
	* sysdeps/unix/sysv/linux/ia64/has_cpuclock.c: Include not-cancel.h.
	(has_cpuclock): Use open_not_cancel_2 instead of open, read_not_cancel
	instead of read and close_not_cancel_no_status instead of close.

	[BZ #1106]
	* sysdeps/s390/s390-64/bcopy.S (__bcopy): Use
	HIDDEN_BUILTIN_JUMPTARGET to jump to memmove.

2005-07-05  Thorsten Kukuk  <kukuk@suse.de>

	[BZ #1111]